--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,32 +2,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Bash on Windows Launch",
+            "name": "c++ gdb",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${command:extension.vscode-wsl-workspaceFolder}/problem.exe",
-            "args": ["<", "${command:extension.vscode-wsl-workspaceFolder}/problem.in"],
+            "program": "${workspaceFolder}/problem.exe",
+            "args": ["<", "${workspaceFolder}/problem.in"],
             "stopAtEntry": false,
-            "cwd": "${command:extension.vscode-wsl-workspaceFolder}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
-            "pipeTransport": {
-                "debuggerPath": "/usr/bin/gdb",
-                "pipeProgram": "${env:windir}\\system32\\bash.exe",
-                "pipeArgs": ["-c"],
-                "pipeCwd": "/"
-            },
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "sourceFileMap": {
-                "${command:extension.vscode-wsl-workspaceFolder}": "${workspaceFolder}"
-            },
-
         }
     ]
 }
