--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "options": {
                 "shell": {
-                    "executable": "C:\\Windows\\System32\\wsl.exe",
+                    "executable": "C:\\Windows\\System32\\wsl.exe"
                 }
             },
             "command": "g++",
@@ -20,12 +20,29 @@
                 "`wslpath",
                 "'${workspaceFolder}\\problem.exe'`",
                 "`wslpath",
-                "'${file}'`",
+                "'${file}'`"
             ],
             "group": {
-                "kind": "build",
+                "kind": "test",
                 "isDefault": true
-            }
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "make",
+            "type": "shell",
+            "command": "make",
+            "args": [],
+            "group": "build",
+        },
+        {
+            "label": "make clean",
+            "type": "shell",
+            "command": "make",
+            "args": [
+                "clean"
+            ],
+            "group": "build"
         }
     ]
 }
