--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "type": "shell",
         "label": "C/C++: g++-9 compile file",
-        "command": "/usr/bin/g++-9",
+        "command": "/usr/bin/g++-7",
         "args": [
           "-std=gnu++17",
           "-ggdb",
@@ -13,11 +13,33 @@
           "-o",
           "${fileDirname}/${fileBasenameNoExtension}"
         ],
-        "problemMatcher": ["$gcc"],
+        "problemMatcher": [
+          "$gcc"
+        ],
         "group": {
           "kind": "build",
           "isDefault": true
         }
+      },
+      {
+        "type": "cppbuild",
+        "label": "C/C++: g++ アクティブなファイルのビルド",
+        "command": "/usr/bin/g++",
+        "args": [
+          "-fdiagnostics-color=always",
+          "-g",
+          "${file}",
+          "-o",
+          "${fileDirname}/${fileBasenameNoExtension}"
+        ],
+        "options": {
+          "cwd": "${fileDirname}"
+        },
+        "problemMatcher": [
+          "$gcc"
+        ],
+        "group": "build",
+        "detail": "コンパイラ: /usr/bin/g++"
       }
     ]
   }
